--- a/src/app/form/executions/view-execution/view-execution.component.html
+++ b/src/app/form/executions/view-execution/view-execution.component.html
@@ -20,6 +20,7 @@
         [values]="values" 
         [readOnly]="true"
         [notes]="notes"
+        [justifications]="justifications"
         [execId]="execution.id"
     ></app-create-execution>
 </ng-container>
