--- a/src/app/form/executions/create-execution/create-execution.component.html
+++ b/src/app/form/executions/create-execution/create-execution.component.html
@@ -79,12 +79,13 @@
 
                                 <mat-form-field *ngIf="component.insertJustification" appearance="fill" class="form-field w-full">
                                     <mat-label>Justificativa (Obrigatório)</mat-label>
-                                    <textarea matInput type="text" [disabled]="readOnlyNotes" [value]="justifications[i] || ''" (change)="justifications[i] = $event.target['value']"></textarea>
+                                    <textarea matInput type="text" [disabled]="readOnly" [value]="justifications[i] || ''" (change)="justifications[i] = $event.target['value']"></textarea>
                                 </mat-form-field>
 
                             </mat-card-content>
                             <mat-card-footer *ngIf="(!readOnly && component.required) || showNotes" class="p-3">
                                 <mat-card-subtitle *ngIf="!readOnly && component.required">Obrigatório</mat-card-subtitle>
+                                <mat-card-subtitle *ngIf="showNotes && notes[i].techManager">{{notes[i].techManager?.name}} deixou uma observação:</mat-card-subtitle>
 
                                 <mat-form-field *ngIf="showNotes" appearance="fill" class="form-field w-full">
                                     <mat-label>Observações</mat-label>
