--- a/src/app/client/edit/edit.component.html
+++ b/src/app/client/edit/edit.component.html
@@ -73,7 +73,7 @@
   
             <mat-form-field appearance="fill" class="form-field">
               <mat-label>Senha</mat-label>
-              <input matInput formControlName="password" type="password" required>
+              <input autocomplete="one-time-code" matInput formControlName="password" type="password" required>
             </mat-form-field>
           </div>
   
