--- a/src/app/cost-center/edit/edit.component.html
+++ b/src/app/cost-center/edit/edit.component.html
@@ -73,7 +73,7 @@
   
             <mat-form-field class="form-field" appearance="fill">
               <mat-label>Senha</mat-label>
-              <input matInput formControlName="password">
+              <input autocomplete="one-time-code" matInput formControlName="password">
             </mat-form-field>
           </div>
   
