--- a/src/app/technician/edit/edit.component.html
+++ b/src/app/technician/edit/edit.component.html
@@ -32,7 +32,7 @@
   
             <mat-form-field class="form-field" appearance="fill">
               <mat-label>Senha</mat-label>
-              <input type="password" matInput formControlName="password" required>
+              <input autocomplete="one-time-code" type="password" matInput formControlName="password" required>
             </mat-form-field>
           </div>
   
